src/components/orb/OrbCanvas.module.css
/* src/components/orb/OrbCanvas.module.css */

.container {
  width: 100%;
  aspect-ratio: 1;
  margin: 0;
  position: relative;
  touch-action: none;
}

